--- a/Omega-Statistic/SSE-PTHREADS/CMakeLists.txt
+++ b/Omega-Statistic/SSE-PTHREADS/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.13)
-project(pthread_test C)
+project(SSE_PTHREADS C)
 
 set(CMAKE_C_STANDARD 99)
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")
 
-add_executable(pthread_test main.c)
+add_executable(SSE_PTHREADS main.c)
